// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/PageHeader should render PageHeader 1`] = `
<div
  className="header"
>
  <SimpleComposeWrapper [typography: 8 mods]
    typography="subheader-m"
    weight="medium"
  >
    Title
  </SimpleComposeWrapper [typography: 8 mods]>
</div>
`;

exports[`UI/PageHeader should render PageHeader with chidlren 1`] = `
<div
  className="header"
>
  <SimpleComposeWrapper [typography: 8 mods]
    typography="subheader-m"
    weight="medium"
  >
    Title
  </SimpleComposeWrapper [typography: 8 mods]>
  <span>
    Children
  </span>
</div>
`;
